--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -441,35 +441,262 @@ It's easy, it's quick, but there are multiple issues if you want anything a bit 
 
 As far as the first issue might be fixed with good CSS knowledge, the rest of them require a bit more work.
 
-### Custom Content Block
-
 So what can you do? Configure the the Content Block to be as close as possible to what you want, go to Code View of your Email and look for `Concat('{"trigger_payload":"', data, '"}')`. This starts the code responsible for Behavioral Trigger Content Block.
+
+### Customize Content Block
+
+Below you can see three tabs.
+
+1. In **Original Code** you will find full code of the built-in Behavioral Trigger Content Block. It is configured to show product image with name and regular + sale price. Number of items is limited to 4 and so is number of columns. You can change this configuration by playing with value of `var settings`.
+2. In **Code Highlights** tab I focus on some part of the code that I found interesting and deserve some attention.
+3. In **Customized Code** I share my own modification of the Behavioral Trigger Content Block that solves a lot of its issues.
 
 <Tabs
     groupId='behavioralTriggerContentBlock'
     defaultValue='highlights'
     values={[
-        {label: 'Snippet Highlights', value: 'highlights'},
-        {label: 'Full Content Block', value: 'block'},
+        {label: 'Original Code', value: 'original'},
+        {label: 'Code Highlights', value: 'highlights'},
+        {label: 'Customized Code', value: 'customized'},
     ]}
 >
-<TabItem value='highlights'>
+<TabItem value='original'>
 
-```html title="Sample code with my test configuration"
-<!--
-AMPScript responsible for pulling the data from Abandoned Engagement Data Extension.
-If you want to use multiple different Behavioral Trigger scenarios, you can do a Lookup here to point into specific Data Extension.
--->
+```html title="Original  Behavioral Trigger Content Block code"
+
 %%[
   Set @data = Concat('{"trigger_payload":"', data, '"}')
   Set @mid = memberid
 ]%%
+
+
+<script runat="server">
+  Platform.Load("Core", "1");
+  try {
+    var defaults = {
+      "link" : "Link",
+      "image_link" : "ImageLink",
+      "product_code" : "ProductCode",
+      "name" : "Name",
+      "regular_price" : "RegularPrice",
+      "sale_price" : "SalePrice",
+      "sku_id" : "SkuID"
+    };
+
+    // Data from block settings
+    var settings = {"fields":{"image_link":"ImageLink","name":"ProductName","regular_price":"RegularPrice","sale_price":"SalePrice"},"maxItems":4,"sortBy":"item_order","sortDirection":"desc","desktopCols":4,"mobileCols":0,"useSalePricing":true};
+    var markupFragments = {
+      "header" : '<div class="wrapper" align="center" style="--max-table-width: 600px; --max-column-width: 130px; width: 100%; table-layout: fixed; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; background-color: #ffffff;"><div class="webkit" style="max-width: 600px; margin: 0 auto;"><!--[if (gte mso 9)|(IE)]><table width="600" align="center"><tr><td><![endif]--><table class="outer" align="center" style="border-spacing: 0; font-family: sans-serif; color: #333333; margin: 0 auto; width: 100%; max-width: 600px;"><tr><td class="multi-column" style="padding: 0; text-align: center; font-size: 0; padding-top: 10px; padding-bottom: 10px;">',
+      "product" : [
+        '<div class="column" style="--max-table-width: 600px; --max-column-width: 130px; width: 100%; max-width: 130px; display: inline-block; vertical-align: top;"><table width="100%" align="center" style="border-spacing: 0; font-family: sans-serif; color: #333333;"><tr> <td style="padding: 0;">',
+'<a href="--product_link--">',
+'<!--[if (gte mso 9)|(IE)]>',
+'<table width="130" align="center"><tr><td width="130" valign="top">',
+'<img src="--image_link--" width="130" alt class="mcbt_image_link" align="center" style="--max-table-width: 600px; --max-column-width: 130px; border: 0; width: 100%; max-width: 130px; height: auto;">',
+'</td></tr></table>',
+'<div style="display:none;width:0px;max-height:0px;overflow:hidden;mso-hide:all;height:0;font-size:0;max-height:0;line-height:0;margin:0 auto;">',
+'<![endif]-->',
+'<img src="--image_link--" alt class="mcbt_image_link" style="border: 0; width: 100%; max-width: 130px; height: auto;">',
+'<!--[if (gte mso 9)|(IE)]>',
+'</div>',
+'<![endif]-->',
+'</a>',
+'</td></tr><tr><td style="padding: 0;"><table class="text_table" align="center" style="border-spacing: 0; font-family: sans-serif; color: #333333; width: 100%; max-width: 130px;"><tr><td class="mcbt_name" style="padding: 0; font-size: 0.8125rem; padding-top: 10px; text-align: center; width: 100%; max-width: 130px;">--name--</td></tr><tr><td class="mcbt_regular_price" style="padding: 0; font-size: 0.8125rem; padding-top: 10px; text-align: center; width: 100%; max-width: 130px;">$--regular_price--</td></tr><tr><td class="mcbt_sale_price" style="padding: 0; font-size: 0.8125rem; padding-top: 10px; text-align: center; color: red; width: 100%; max-width: 130px;">$--sale_price--</td></tr>',
+'</table></td></tr><tr></tr></table></div>'
+      ],
+      "attributes" : {"image_link":"image_link","product_link":"link","name":"name","regular_price":"regular_price","sale_price":"sale_price"},
+      "footer" : '</td></tr></table><!--[if (gte mso 9)|(IE)]></td></tr></table><![endif]--></div></div>',
+      "salePricingStyle" : "text-decoration:line-through;"
+    };
+    var defaultProductMarkup = markupFragments["product"].join("");
+
+    // Read data from MC
+    var data = Platform.Variable.GetValue("@data");
+    var mid = Platform.Variable.GetValue("@mid");
+    var event_locale = Platform.Variable.GetValue("@event_locale");
+
+    // Build the url
+    var protocol = "https";
+    var hostname = mid + ".recs.igodigital.com";
+    var qs = "?item_count=" + settings["maxItems"] + "&sort_by=" + settings["sortBy"] + "&sort_direction=" + settings["sortDirection"];
+    var includes = [];
+    for (var key in settings["fields"]) {
+      if(defaults[key] == null) {
+        includes = includes.concat(settings["fields"][key]);
+      }
+    }
+    if(includes.length > 0) {
+      qs += "&include=" + includes.join("|")
+    }
+    if(event_locale){
+      qs += "&locale=" + event_locale
+    }
+    var url = protocol + "://" + hostname + "/" + mid + "/trigger" + qs;
+
+    var result = HTTP.Post(url, "application/json", data, []);
+    if (result.StatusCode == 200) {
+      var response = Platform.Function.ParseJSON(result.Response[0]);
+
+      // Expose fields in response as Ampscript variables
+      for(var responseField in response) {
+        var value = response[responseField];
+
+        if(responseField === "products" || responseField === "current_cart") {
+          var prefix = (responseField === "products") ? "@item_" : "@cart_";
+          for(var i=0; i<value.length; i++) {
+            for(var itemField in value[i]) {
+              var name = prefix + itemField + "_" + (i+1);
+              var val = value[i][itemField];
+              Platform.Variable.SetValue(name, val);
+            }
+          }
+        }
+        else if(responseField === "user") {
+          var prefix = "@user_";
+          for(var userField in value) {
+            var name = prefix + userField;
+            var val = value[userField];
+            Platform.Variable.SetValue(name, val);
+          }
+        }
+        else {
+          Platform.Variable.SetValue("@"+responseField, value);
+        }
+      }
+
+      // Use abandoned items or current items?
+      var useRecentItems = false;
+      if (useRecentItems && response["current_cart"] !== undefined) {
+        var products = response["current_cart"];
+        if(products.length === 0) {
+          Write("User has an empty cart so stop send");
+          Platform.Function.RaiseError("Trigger no longer valid - User has an empty cart.", true, "statusCode","3");
+        }
+      } else {
+        var products = response["products"];
+      }
+
+      // Exit the send if the user made a purchase since the trigger
+      if (response["purchased"] === true) {
+        Write("User has purchased so stop send");
+        Platform.Function.RaiseError("Trigger no longer valid - User has purchased since trigger.", true, "statusCode","3");
+      };
+
+      // true to use salePricing style, false if not
+      var useSalePricing = true;
+
+      // Write email contents
+      Write(response["tracking_pixel"]);
+      Write(markupFragments["header"].replace('\"', '"'));
+      Write('<!--[if (gte mso 9)|(IE)]>');
+      Write('<table>');
+      Write('<![endif]-->');
+      for (var i=0; i < products.length; i++) {
+        var product = products[i];
+        var productAttributes = markupFragments["attributes"];
+
+        Write('<!--[if (gte mso 9)|(IE)]>');
+        if(i % 4 === 0) {
+          Write('<tr>');
+        }
+        Write('<td width="130px" valign="top">');
+        Write('<![endif]-->');
+
+        var productMarkup = defaultProductMarkup;
+        if(useSalePricing && product["sale_price"] > 0 && product["sale_price"] < product["regular_price"] && productMarkup.indexOf("regular_price") > 0) {
+          var matches = productMarkup.match('(class="mcbt_regular_price" style=")(.*?)"');
+          if(matches != null && matches.length > 0) {
+            productMarkup = productMarkup.replace(matches[0], matches[1] + matches[2] + ' ' + markupFragments["salePricingStyle"] + '"');
+          }
+        }
+
+        for(var markupKey in productAttributes) {
+          var productKey = productAttributes[markupKey];
+          var pattern = "--" + markupKey + "--";
+          var value = product[productKey];
+          if (markupKey === "rating") {
+            value = Math.round((value / 5) * 98);
+          }
+          else if (markupKey === "regular_price" || markupKey === "sale_price") {
+            var parsed = value.toString().split(".");
+            if (parsed.length > 1 && parsed[1].length === 1 && parsed[1] !== "0") {
+              value = value.toString() + "0";
+            }
+          }
+          while(productMarkup.indexOf(pattern) > 0) {
+            productMarkup = productMarkup.replace(pattern, function(){return value});
+          }
+        }
+
+        Write(productMarkup.replace('\"', '"'));
+
+        Write('<!--[if (gte mso 9)|(IE)]>');
+        Write('</td>');
+        if( (i+1) % columnCount === 0 || i === products.length-1) {
+          Write('</tr>');
+        }
+        Write('<![endif]-->');
+      }
+      Write('<!--[if (gte mso 9)|(IE)]>');
+      Write('</table>');
+      Write('<![endif]-->');
+      Write(markupFragments["footer"].replace('\"', '"'));
+    }
+    else {
+      Write("Unable to retrieve product information: statusCode=" + result.StatusCode);
+      Platform.Function.RaiseError("Quit send.", true, "statusCode","3");
+    }
+  } catch(e) {
+    Write(e);
+    Platform.Function.RaiseError("Quit send.", true, "statusCode","3");
+  }
+</script>
 ```
 
 </TabItem>
-<TabItem value='block'>
+<TabItem value='highlights'>
 
-```html title="Sample code with my test configuration"
+#### 1. AMPScript personalisation
+
+```js
+%%[
+    Set @data = Concat('{"trigger_payload":"', data, '"}')
+    Set @mid = memberid
+]%%
+```
+
+The first four lines of the Behavioral Trigger Content Block code are already interesting. They are using AMPScript despite the rest is written using SSJS. It could easily be written in SSJS alltogether for more optimized execution.
+
+You can also see that they are pulling the Behavioral data by using personalisation string on `data` - the Abandoned Engagement Data Extension column containing encrypted information. If you want to have more control over the source of this information, you can think about making a lookup here. This would allow you to even use multiple Content Blocks in one email (or just mix browsed, wishlisted and added to cart items in one block).
+
+#### 2. Try/Catch block
+
+```js
+try {
+    // Behavioral Trigger Content Block code
+} catch(e) {
+    Write(e);
+    Platform.Function.RaiseError("Quit send.", true, "statusCode","3");
+}
+```
+
+The try/catch block is a great idea but as it has separate scope in SSJS, it means that no variable from within will be available outside of it. And this means no possibility to create additional personalisations based on the response from the API call that happens within.
+
+This can be fixed in two ways. Either the variables can be declared before the try/catch starts, or their values can be exported to AMPScript variables.
+
+#### 3. Settings & Markup Fragments
+
+```js
+var settings = {(...)};
+var markupFragments = {(...)};
+```
+
+Those two variables store all options that you have selected when configuring the Behavioral Trigger Content Block. You can alter them outside of what is possible in the UI. You can also change the HTML that is being generated for the products. Remember however, that the classes visible here are used by the Behavioral Content CSS, so any changes might break the styling.
+
+</TabItem>
+<TabItem value='customized'>
+
+```html title="Customized Behavioral Trigger Content Block code"
 %%[
   Set @data = Concat('{"trigger_payload":"', data, '"}')
   Set @mid = memberid
